Some work on post formatting; stubbing a sidebar

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,6 +3,8 @@
   {% include head.html %}
   <body>
     {% include header.html %}
+    {% include sidebar.html %}
+    {% include carousel.html %}
     {{ content }}
     {% include footer.html %}
   </body>
