--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,19 +13,16 @@
           <a href="{{ site.baseurl }}/" class="nav-link">Home</a>
         </li>
         <li class="nav-item">
-          <a href="{{ site.baseurl }}/archive/" class="nav-link">Archives</a>
+          <a href="{{ site.baseurl }}/contact.html" class="nav-link">Contact</a>
         </li>
         <li class="nav-item">
-          <a href="{{ site.baseurl }}/contact/" class="nav-link">Contact</a>
+          <a href="{{ site.baseurl }}/join.html" class="nav-link">Join</a>
         </li>
         <li class="nav-item">
-          <a href="{{ site.baseurl }}/join/" class="nav-link">Join</a>
+          <a href="https://squareup.com/store/new-england-model-engineering-society" class="nav-link">Store</a>
         </li>
         <li class="nav-item">
-          <a href="{{ site.baseurl }}/directions/" class="nav-link">Directions</a>
-        </li>
-        <li class="nav-item">
-          <a href="{{ site.baseurl }}/calendar/" class="nav-link">Calendar</a>
+          <a href="{{ site.baseurl }}/calendar.html" class="nav-link">Calendar</a>
         </li>
       </ul>
     </div>
