--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@
   <body>
     {% include header.html %}
     {% include sidebar.html %}
-    {% include carousel.html %}
+    {% include carousel.html name="home_carousel" data=site.data.home_carousel %}
     {{ content }}
     {% include footer.html %}
   </body>
