Paginations and posts!

--- a/css/main.scss
+++ b/css/main.scss
@@ -4,4 +4,4 @@
 @import 'bootstrap/bootstrap';
 @import 'custom/includes/header';
 @import 'custom/includes/banner';
-
+@import 'custom/includes/posts';
