--- a/_includes/posts.html
+++ b/_includes/posts.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col">
-        {% for post in site.posts %}
+        {% for post in paginator.posts %}
           <div>
             <h2><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h2>
             <p class="text-info lead">
