Turned off carousel until we can get it working. tweaked some posts. styled posts, galleries. touched join, contact, calendar.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,8 @@
   <body>
     {% include header.html %}
     {% include sidebar.html %}
-    {% include carousel.html name="home_carousel" data=site.data.home_carousel %}
+    {% include banner.html %}
+<!-- CAROUSEL NO WORKY include carousel.html name="home_carousel" data=site.data.home_carousel -->
     {{ content }}
     {% include footer.html %}
   </body>
