--- a/css/main.scss
+++ b/css/main.scss
@@ -5,3 +5,8 @@
 @import 'custom/includes/header';
 @import 'custom/includes/banner';
 @import 'custom/includes/posts';
+@import 'custom/includes/pagination';
+@import 'custom/includes/post';
+@import 'custom/includes/gallery';
+@import 'solarized-dark';
+
