--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -1,6 +1,7 @@
 <div id="{{ include.name }}" class="carousel slide" data-ride="carousel">
- 
-  <ol class="carousel-indicators">
+
+<!-- Build the list of carousel indicators
+  <ul class="carousel-indicators">
    {% for picture in include.data %}
    {% if forloop.first == true %}
      <li data-target=”#{{ include.name }}” data-slide-to=”0" class=”active”></li>
@@ -8,45 +9,24 @@
      <li data-target=”#{{ include.name }}” data-slide-to=”{{ forloop.index0 }}”></li>
    {% endif %}
    {% endfor %}
-   </ol>
-  <div class=”carousel-inner” role=”listbox”>
+  </ul>
+ -->
+<!-- Build the slideshow proper -->
+  <div class=”carousel-inner”>
     {% for picture in include.data %}
       {% if forloop.first == true %}
-        {% if picture.dest %}
-          <a href="{{ picture.dest }}">
-        {% endif %}
-        <div class=”item active”>
-          {% if picture.title %}
-            <img src=”{{ picture.url }}” alt=”{{ picture.title }}”>
-          {% else %}
-            <img src=”{{ picture.url }}”>
-          {% endif %}
-          {% if picture.caption %}
-            <div class=”carousel-caption”>
-              {{ picture.caption }}
-            </div>
-          {% endif %}
+        <div class=”carousel-item active”>
+          <img class="d-block w-100" src={{ picture.url }}>
         </div>
       {% else %}
-        <div class=”item”>
-          {% if picture.title %}
-            <img src=”{{ picture.url }}” alt=”{{ picture.title }}”>
-          {% else %}
-            <img src=”{{ picture.url }}”>
-          {% endif %}
-          {% if picture.caption %}
-            <div class=”carousel-caption”>
-              {{ picture.caption }}
-            </div>
-          {% endif %}
+        <div class=”carousel-item”>
+          <img class="d-block w-100" src={{ picture.url }}>
         </div>
-        {% if picture.dest %}
-          </a>
-        {% endif %}
       {% endif %}
     {% endfor %}
- </div>
-
+  </div>
+</div>
+  <!-- Left and right controls
  <a class=”left carousel-control” href=”#{{ include.name }}” role=”button” data-slide=”prev”>
  <span class=”glyphicon glyphicon-chevron-left” aria-hidden=”true”></span>
  <span class=”sr-only”>Previous</span>
@@ -56,3 +36,4 @@
  <span class=”sr-only”>Next</span>
  </a>
 </div>
+ -->
