--- a/css/custom/includes/_banner.scss
+++ b/css/custom/includes/_banner.scss
@@ -1,6 +1,6 @@
 #banner{
   position: relative;
-  background: url('../img/banner.jpeg');
+  background: url('../img/banner.png');
   min-height: 400px;
 
   .primary-overlay{
