--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -1,39 +1,35 @@
-<div id="{{ include.name }}" class="carousel slide" data-ride="carousel">
-
-<!-- Build the list of carousel indicators
-  <ul class="carousel-indicators">
+<div id="{{ include.name | escape }}" class="carousel slide" data-ride="carousel">
+<!-- Build the list of carousel indicators -->
+  <ol class="carousel-indicators">
    {% for picture in include.data %}
    {% if forloop.first == true %}
-     <li data-target=”#{{ include.name }}” data-slide-to=”0" class=”active”></li>
+     <li data-target=”#{{ include.name | escape }}” data-slide-to=”0" class=”active”></li>
    {% else %}
-     <li data-target=”#{{ include.name }}” data-slide-to=”{{ forloop.index0 }}”></li>
+     <li data-target=”#{{ include.name | escape }}” data-slide-to=”{{ forloop.index0 }}”></li>
    {% endif %}
    {% endfor %}
-  </ul>
- -->
+  </ol>
 <!-- Build the slideshow proper -->
   <div class=”carousel-inner”>
     {% for picture in include.data %}
       {% if forloop.first == true %}
-        <div class=”carousel-item active”>
-          <img class="d-block w-100" src={{ picture.url }}>
+        <div class="carousel-item active">
+          <img class="img-responsive" src={{ picture.url }}>
         </div>
       {% else %}
         <div class=”carousel-item”>
-          <img class="d-block w-100" src={{ picture.url }}>
+          <img class="img-responsive" src={{ picture.url }}>
         </div>
       {% endif %}
     {% endfor %}
   </div>
+  <a class="carousel-control-prev" href="#{{ include.name | escape }}" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#{{ include.name | escape }}" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+
 </div>
-  <!-- Left and right controls
- <a class=”left carousel-control” href=”#{{ include.name }}” role=”button” data-slide=”prev”>
- <span class=”glyphicon glyphicon-chevron-left” aria-hidden=”true”></span>
- <span class=”sr-only”>Previous</span>
- </a>
- <a class=”right carousel-control” href=”#{{ include.name }}” role=”button” data-slide=”next”>
- <span class=”glyphicon glyphicon-chevron-right” aria-hidden=”true”></span>
- <span class=”sr-only”>Next</span>
- </a>
-</div>
- -->
