--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,10 +2,14 @@
 <html lang="en">
   {% include head.html %}
   <body>
-    {% include sidebar.html %}
-    {% include banner.html %}
-    {% include header.html %}
-    {{ content }}
-    {% include footer.html %}
+    <div class="col-xs-11 col-sm-4 col-md-3 hidden-xs" id="sidebar">
+      {% include sidebar.html %}
+    </div>
+    <div class="col-xs-12 col-sm-8 col-md-9" id="main"> 
+      {% include banner.html %}
+      {% include header.html %}
+      {{ content }}
+    </div>
+      {% include footer.html %}
   </body>
 </html>
