--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -2,7 +2,7 @@
 <html lang="en">
   {% include head.html %}
   <body>
-    {% include header.html %}
+    {% include navbar.html %}
     {% include post.html %}
     {% include footer.html %}
   </body>
