--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,13 +1,7 @@
 <section id="banner" class="py-5 d-none d-sm-block">
   <div class="primary-overlay text-white">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6 text-center">
-          <h1 class="display-3 pt-4">
-            The New England Model Engineering Society
-          </h1>
-        </div>
-      <div class="col-md-6"></div>
-    </div>
+    <h1 class="display-3 pt-4 text-center"">
+      The New England Model Engineering Society
+    </h1>
   </div>
 </section>
