--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,12 @@
-  <!-- sidebar left col -->
-    <div id="logo">
-      
-    </div>
+<!-- NAV -->
+<nav class="navbar navbar-expand-md navbar-light py-4">
+  <a href="{{ site.baseurl }}/" class="navbar-brand">
+    <h3 class="d-inline align-middle pl-3 text-primary">NEMES</h3>
+  </a>
+  <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
         <a href="{{ site.baseurl }}/" class="nav-link">Home</a>
@@ -19,5 +24,5 @@
         <a href="{{ site.baseurl }}/calendar.html" class="nav-link">Calendar</a>
       </li>
     </ul>
-    <h2>HULLO I AM SIDEBAR</h2>
-  <!-- /sidebar -->
+  </div>
+</nav>
