--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,14 +2,18 @@
 <html lang="en">
   {% include head.html %}
   <body>
-    <div class="col-xs-11 col-sm-4 col-md-3 hidden-xs" id="sidebar">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-3 hidden-xs" id="sidebar">
       {% include sidebar.html %}
-    </div>
-    <div class="col-xs-12 col-sm-8 col-md-9" id="main"> 
+      </div>
+    <div class="col-md-9" id="main"> 
       {% include banner.html %}
-      {% include header.html %}
+      {% include navbar.html %}
       {{ content }}
     </div>
-      {% include footer.html %}
+  </div>
+  </div>
+    {% include footer.html %}
   </body>
 </html>
