--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,23 +1,18 @@
-  <!-- sidebar left col -->
-    <div id="logo">
-      
-    </div>
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a href="{{ site.baseurl }}/" class="nav-link">Home</a>
-      </li>
-      <li class="nav-item">
-        <a href="{{ site.baseurl }}/contact.html" class="nav-link">Contact</a>
-      </li>
-      <li class="nav-item">
-        <a href="{{ site.baseurl }}/join.html" class="nav-link">Join</a>
-      </li>
-      <li class="nav-item">
-        <a href="https://squareup.com/store/new-england-model-engineering-society" class="nav-link">Store</a>
-      </li>
-      <li class="nav-item">
-        <a href="{{ site.baseurl }}/calendar.html" class="nav-link">Calendar</a>
-      </li>
-    </ul>
-    <h2>HULLO I AM SIDEBAR</h2>
-  <!-- /sidebar -->
+<!-- sidebar left col -->
+  <div id="logo">
+    <a href="{{ site.baseurl }}">
+      <img class="img-fluid"src="img/nemes_logo.svg">
+    </a> 
+  </div>
+  <ul class="navbar-nav">
+    {% for item in site.data.bar.side %}
+    <li class="nav-item">
+      {% if item.ext == true %}
+        <a href="{{ item.link }}" class="nav-link">{{ item.name }}</a>
+      {% else %}
+        <a href="{{ site.baseurl }}{{ item.link }}" class="nav-link">{{ item.name }}</a>
+      {% endif %}
+    </li>
+    {% endfor %}
+  </ul>
+<!-- /sidebar -->
