CAROUSEL IS WORKING! something to do with bad double-quotes.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,7 @@
       {% include sidebar.html %}
       </div>
     <div class="col-md-9" id="main"> 
-      {% include banner.html %}
+      {% include carousel.html name="home_carousel" data=site.data.home_carousel %}
       {% include navbar.html %}
       {{ content }}
     </div>
