--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -3,21 +3,21 @@
   <ol class="carousel-indicators">
    {% for picture in include.data %}
    {% if forloop.first == true %}
-     <li data-target=”#{{ include.name | escape }}” data-slide-to=”0" class=”active”></li>
+     <li data-target="#{{ include.name | escape }}" data-slide-to="0" class="active"></li>
    {% else %}
-     <li data-target=”#{{ include.name | escape }}” data-slide-to=”{{ forloop.index0 }}”></li>
+     <li data-target="#{{ include.name | escape }}" data-slide-to="{{ forloop.index0 }}"></li>
    {% endif %}
    {% endfor %}
   </ol>
 <!-- Build the slideshow proper -->
-  <div class=”carousel-inner”>
+  <div class="carousel-inner">
     {% for picture in include.data %}
       {% if forloop.first == true %}
         <div class="carousel-item active">
           <img class="img-responsive" src={{ picture.url }}>
         </div>
       {% else %}
-        <div class=”carousel-item”>
+        <div class="carousel-item">
           <img class="img-responsive" src={{ picture.url }}>
         </div>
       {% endif %}
