--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,7 +22,6 @@
 </footer>
 
 <!-- JS -->
-<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="js/jquery/jquery-3.3.1.min.js"></script>
+<script src="js/popper/popper.min.js"></script>
+<script src="js/bootstrap/bootstrap.min.js"></script>
