--- a/css/custom/includes/_header.scss
+++ b/css/custom/includes/_header.scss
@@ -1,7 +1,7 @@
 .navbar{
-  box-shadow: 1px 1px 3px $primary;
+  box-shadow: 5px 5px 8px $primary;
   opacity: 0.8;
-  background: $white;
+  background: $primary;
 
   .nav-item{
     font-size: 1.4rem;
@@ -13,6 +13,6 @@
   color: $info !important;
 
   &:hover {
-    color: $primary !important;
+    color: $white !important;
   }
 }
