--- a/css/main.scss
+++ b/css/main.scss
@@ -2,8 +2,10 @@
 ---
 
 @import 'bootstrap/bootstrap';
-@import 'custom/includes/header';
-@import 'custom/includes/banner';
+@import 'custom/includes/main';
+@import 'custom/includes/topnav';
+@import 'custom/includes/sidebar';
+@import 'custom/includes/carousel';
 @import 'custom/includes/posts';
 @import 'custom/includes/pagination';
 @import 'custom/includes/post';
