--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,5 @@
 <!-- NAV -->
-<nav class="topnav navbar navbar-expand-md navbar-light py-4">
+<nav class="topnav navbar navbar-expand-md">
   <div class="collapse navbar-collapse">
     <ul class="navbar-nav">
       {% for item in site.data.nav.top %} 
