--- a/css/custom/includes/_main.scss
+++ b/css/custom/includes/_main.scss
@@ -1,8 +1,8 @@
 #main {
-  padding: 0.5rem;
+  padding: 0rem;
 }
 
 #meeting {
-  margin: 0.5rem;
+  margin: $top-gap;
   border: 2px solid $primary;
 }
