--- a/css/custom/_variables.scss
+++ b/css/custom/_variables.scss
@@ -1,5 +1,6 @@
 $primary: #8d021f; // burgundy
 $info: #7f7f7f; // grey
+$top-gap: 0.5rem; // gap between topnav and main body
 
 $code-heading-background: #dededc; // light grey
 $code-text-color: #b6b6b6; // off white
