--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,8 +15,10 @@
       {% include sidebar.html %}
         </div>
       </div>
-      <div class="col-md-9" id="main"> 
+      <div class="col-md-9" id="main">
+        <div id="content">
         {{ content }}
+        </div>
       </div>
     </div>
   </div>
