external links in topnav now open in new tab

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -5,7 +5,7 @@
       {% for item in site.data.nav.top %} 
       <li class="nav-item">
         {% if item.ext == true %}
-          <a href="{{ item.link }}" class="nav-link">{{ item.name }}</a>
+          <a href="{{ item.link }}" target="_blank" class="nav-link">{{ item.name }}</a>
         {% else %}
           <a href="{{ site.baseurl }}{{ item.link }}" class="nav-link">{{ item.name }}</a>
         {% endif %}
