--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,6 +22,6 @@
 </footer>
 
 <!-- JS -->
-<script src="js/jquery/jquery-3.3.1.min.js"></script>
-<script src="js/popper/popper.min.js"></script>
-<script src="js/bootstrap/bootstrap.min.js"></script>
+<script src="/js/jquery/jquery-3.3.1.min.js"></script>
+<script src="/js/popper/popper.min.js"></script>
+<script src="/js/bootstrap/bootstrap.min.js"></script>
