--- a/_includes/posts.html
+++ b/_includes/posts.html
@@ -1,7 +1,7 @@
 <section id="posts" class="py-5">
   <div class="row">
     <div class="col">
-      {% for post in paginator.posts %}
+      {% for post in site.posts %}
         <div>
           <h2><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h2>
           <p class="text-info lead">
