--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,16 +4,16 @@
   <body>
   <div class="container-fluid">
     <div class="row">
-      <div class="col-md-12" id="header"> 
+      <div class="col-md-3" id="logo">
+      </div>
+      <div class="col-md-9" id="caro"> 
       {% include carousel.html name="home_carousel" data=site.data.home_carousel %}
       {% include navbar.html %}
       </div>
     </div>
     <div class="row">
-      <div class="col-md-3 hidden-xs">
-        <div id="sidebar">
+      <div class="col-md-3 hidden-xs" id="sidebar">
       {% include sidebar.html %}
-        </div>
       </div>
       <div class="col-md-9" id="main">
         <div id="content">
