--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@
   <body>
   <div class="container-fluid">
     <div class="row">
-      <div class="col-md-3" id="logo">
+      <div class="col-md-3" id="logo" style="background-image: url({{ '/img/nemes_logo.svg' | relative_url }});">
       </div>
       <div class="col-md-9" id="caro"> 
       {% include carousel.html name="home_carousel" data=site.data.home_carousel %}
