--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -4,6 +4,7 @@
   <body>
     {% include navbar.html %}
     {% include post.html %}
+    {% include slideshow.html %}
     {% include footer.html %}
   </body>
 </html>
