--- a/css/custom/includes/_main.scss
+++ b/css/custom/includes/_main.scss
@@ -17,3 +17,8 @@
   background-position: center;
   background-size: contain;
 }
+
+.home-banner {
+  background-color: $primary;
+  color : #FFFFFF;
+}
