--- a/_includes/news.html
+++ b/_includes/news.html
@@ -1,10 +1,10 @@
 <section id="news" class="py-5">
   {% for post in site.posts limit 5 %}
     <div class="row">
-      <div class="col">
+      <div class="col-3">
         {% if post.picture %}
           <a href="{{ post.url | prepend: site.baseurl }}">
-            <img src="{{ post.picture }}" height="133px">
+            <img src="{{ post.picture }}" height="133" alt="Thumbnail image for {{ post.title }}">
           </a>
         {% endif %}
       </div>
