--- a/css/main.scss
+++ b/css/main.scss
@@ -3,6 +3,7 @@
 
 @import 'bootstrap/bootstrap';
 @import 'custom/includes/main';
+@import 'custom/includes/events';
 @import 'custom/includes/topnav';
 @import 'custom/includes/sidebar';
 @import 'custom/includes/carousel';
