--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -3,7 +3,7 @@
   {% include head.html %}
   <body>
     {% include navbar.html %}
-    {% include post.html %}
+    {% include slideshow.html %}
     {% include footer.html %}
   </body>
 </html>
