--- a/css/custom/includes/_main.scss
+++ b/css/custom/includes/_main.scss
@@ -16,6 +16,8 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
+  border-left: 20px solid $primary;
+  border-right: 20px solid $primary;
 }
 
 .home-banner {
