--- a/css/custom/includes/_topnav.scss
+++ b/css/custom/includes/_topnav.scss
@@ -10,9 +10,9 @@
 }
 
 .nav-link {
-  color: $primary;
+  color: $white;
 
   &:hover {
-    color: $white !important;
+    color: $info !important;
   }
 }
