--- a/css/custom/includes/_sidebar.scss
+++ b/css/custom/includes/_sidebar.scss
@@ -1,14 +1,14 @@
 .navbar-nav.sidebar {
   .nav-item{
     font-size: 1.4rem;
-    padding-right: 20px;
+    padding-bottom: 20px;
   }
 
   .nav-link{
-    color: $info !important;
+    color: $white !important;
   
     &:hover {
-      color: $white !important;
+      color: $primary!important;
     }
   }
 }
