--- a/_includes/slideshow.html
+++ b/_includes/slideshow.html
@@ -17,11 +17,11 @@
     {% for picture in page.static-gallery.items %}
       {% if forloop.first == true %}
         <div class="carousel-item active">
-          <img class="center-block" src="{{ picture | relative_url }}" alt="untitled image">
+          <img class="center-block" src="{{ picture }}" alt="untitled image">
         </div>
       {% else %}
         <div class="carousel-item">
-          <img class="center-block" src="{{ picture | relative_url }}" alt="untitled image">
+          <img class="center-block" src="{{ picture }}" alt="untitled image">
         </div>
       {% endif %}
     {% endfor %}
