--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -3,7 +3,20 @@
   {% include head.html %}
   <body>
     {% include navbar.html %}
-    {% include slideshow.html %}
+    <div id="post" class="container pt-3">
+      <div class="row">
+        <div class="col">
+          <p class="lead text-info">
+            {{ page.date | date: "%b %-d, %Y" }}
+          </p>
+          <h1>{{ page.title }}</h1>
+          <article>
+            {{ content }}
+          </article>
+        </div>
+      </div>
+    </div>
+    {% include gallery.html %}
     {% include footer.html %}
   </body>
 </html>
