new modal gallery attempt

--- a/css/custom/includes/_gallery.scss
+++ b/css/custom/includes/_gallery.scss
@@ -1,22 +1,6 @@
 #gallery {
-  .row > .column {
-    padding: 0 8px;
-  }
-  
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-  
-  /* Create four equal columns that floats next to eachother */
-  .column {
-    float: left;
-    width: 25%;
-  }
-  
   /* The Modal (background) */
-  .modal {
+  #lightboxModal {
     display: none;
     position: fixed;
     z-index: 1;
@@ -27,17 +11,17 @@
     height: 100%;
     overflow: auto;
     background-color: black;
+  
+    .modal-content {
+      position: relative;
+      background-color: #fefefe;
+      margin: auto;
+      padding: 0;
+      width: 90%;
+      max-width: 1200px;
+    }
   }
   
-  /* Modal Content */
-  .modal-content {
-    position: relative;
-    background-color: #fefefe;
-    margin: auto;
-    padding: 0;
-    width: 90%;
-    max-width: 1200px;
-  }
   
   /* The Close Button */
   .close {
@@ -57,7 +41,7 @@
   }
   
   /* Hide the slides by default */
-  .mySlides {
+  .lb-slides {
     display: none;
   }
   
@@ -91,37 +75,12 @@
     background-color: rgba(0, 0, 0, 0.8);
   }
   
-  /* Number text (1/3 etc) */
-  .numbertext {
+  /* Ordinal text (1/3 etc) */
+  .counttext {
     color: #f2f2f2;
     font-size: 12px;
     padding: 8px 12px;
     position: absolute;
     top: 0;
-  }
-  
-  /* Caption text */
-  .caption-container {
-    text-align: center;
-    background-color: black;
-    padding: 2px 16px;
-    color: white;
-  }
-  
-  img.demo {
-    opacity: 0.6;
-  }
-  
-  .active,
-  .demo:hover {
-    opacity: 1;
-  }
-  
-  img.hover-shadow {
-    transition: 0.3s;
-  }
-  
-  .hover-shadow:hover {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
 }
