new modal gallery attempt

--- a/css/custom/includes/_gallery.scss
+++ b/css/custom/includes/_gallery.scss
@@ -12,7 +12,7 @@
     overflow: auto;
     background-color: black;
   
-    .modal-content {
+    .modal-dialog {
       position: relative;
       background-color: #fefefe;
       margin: auto;
