--- a/css/custom/includes/_gallery.scss
+++ b/css/custom/includes/_gallery.scss
@@ -17,7 +17,7 @@
       background-color: #fefefe;
       margin: auto;
       padding: 0;
-      width: 90%;
+      width: 1200px;
       max-width: 1200px;
     }
   }
